<resources>
    <string name="app_name">Помощник кинолюбителя</string>
    <string name="search_hint">Search by movie title</string>
    <string name="search_button">Search</string>

    <string name="title">This is a long title text displayed in multiple lines.</string>

    <string name="poster_of_movie">poster_of_movie</string>
    <string name="backdrop_path">backdrop_path</string>
    <string name="estimate">Оценить</string>
    <string name="FavoriteMoviesActivityLabel">Favorites Movies</string>
    <string name="recommendationsMovies">Смотрите также</string>
    <string name="additionalMaterials">Дополнительные материалы</string>
    <string name="favoritesMovies">Избранные фильмы</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="yourRating">Ваша оценка</string>
    <string name="setToZero">Обнулить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notFound">Ничего не найдено</string>
    <string name="newMovies">Новые фильмы</string>
    <string name="popularMovies">Популярные фильмы</string>
    <string name="topRated">Фильмы с лучшим рейтингом</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="crew">Над фильмом работали</string>
    <string name="cast">Актёры</string>
    <string name="genres">Жанры</string>
    <string name="textview">TextView</string>
</resources>
