<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/CollapsingToolbar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="48dp"
            app:expandedTitleMarginStart="28dp"
            app:expandedTitleTextAppearance="@style/ExpandedToolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:lineSpacingMultiplier="4"
            app:maxLines="3"
            app:title="@string/title">


            <ImageView
                android:id="@+id/toolbarImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/backdrop_path"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroungActivityDetail">

            <TextView
                android:id="@+id/voteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/estimate"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_in_detail"
                android:fadingEdge="vertical|none"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/estimate"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/voteAverage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/releaseDateAndCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="TextView"
                android:textColor="@color/textColorInDetail"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/voteAverage" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="TextView"
                android:textColor="@color/textColorInDetail"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateAndCountry" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                android:textColor="@color/textColorInDetail"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genres" />

            <!--<TextView-->
                <!--android:id="@+id/additionalMaterials"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="24dp"-->
                <!--android:layout_marginLeft="24dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:text="@string/additionalMaterials"-->
                <!--android:textSize="18sp"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="@android:color/white"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/runtime" />-->

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/recyclerViewAdditionalMaterials"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/additionalMaterials" />-->

            <!--<fragment-->
                <!--android:id="@+id/youtubePlay"-->
                <!--android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="18dp"-->
                <!--android:layout_marginStart="24dp"-->
                <!--android:layout_marginLeft="24dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginEnd="24dp"-->
                <!--android:layout_marginRight="24dp"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintHorizontal_bias="0.458"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/additionalMaterials" />-->

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:lineSpacingMultiplier="1.2"
                android:text="TextView"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/runtime" />

            <TextView
                android:id="@+id/recommendationsMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/recommendationsMovies"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewRecommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendationsMovies" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:clickable="true"
        app:backgroundTint="@color/textColorInDetail"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@android:drawable/star_big_off" />

</android.support.design.widget.CoordinatorLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.design.widget.CoordinatorLayout-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:fitsSystemWindows="true"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent">-->

<!--<android.support.design.widget.AppBarLayout-->
    <!--android:id="@+id/appBar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="300dp"-->
    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
    <!--android:fitsSystemWindows="true">-->

    <!--<android.support.design.widget.CollapsingToolbarLayout-->
        <!--android:id="@+id/collapsingToolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
        <!--android:fitsSystemWindows="true"-->
        <!--app:contentScrim="?attr/colorPrimary"-->
        <!--app:expandedTitleMarginStart="48dp"-->
        <!--app:expandedTitleMarginEnd="64dp">-->

        <!--<ImageView-->
            <!--android:id="@+id/toolbarImage"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:fitsSystemWindows="true"-->
            <!--app:layout_collapseMode="parallax" />-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
            <!--app:layout_collapseMode="pin" />-->
    <!--</android.support.design.widget.CollapsingToolbarLayout>-->
<!--</android.support.design.widget.AppBarLayout>-->

<!--<android.support.v4.widget.NestedScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->

<!--</android.support.v4.widget.NestedScrollView>-->
<!--</android.support.design.widget.CoordinatorLayout>-->